src/objects/User.object
<CustomObject>
    <fields>
        <fullName>CSM_Quota__c</fullName>
        <description>Only used for Client Success Managers.</description>
        <inlineHelpText>Only used for Client Success Managers.</inlineHelpText>
        <label>CSM Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreateNetSuiteSalesOrders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Grants access to the Create NetSuite Sales Order button on the Opportunity.</description>
        <inlineHelpText>Grants access to the Create NetSuite Sales Order button on the Opportunity.</inlineHelpText>
        <label>Create NetSuite Sales Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__MeetingsCollaboratorUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReadyTalk Collaborator User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__ReadyTalkAdministrator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the user is allowed to perform administrative functions in the ReadyTalk application</description>
        <inlineHelpText>Indicates the user is allowed to perform administrative functions in the ReadyTalk application</inlineHelpText>
        <label>ReadyTalk Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__ReadyTalkUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the user has access to the full functionality in the ReadyTalk application.</description>
        <inlineHelpText>Indicates the user has access to the full functionality in the ReadyTalk application.</inlineHelpText>
        <label>ReadyTalk Webinar User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Report_To__c</fullName>
        <description>Who does this user report to?</description>
        <inlineHelpText>Who does this user report to?</inlineHelpText>
        <label>Role Report To</label>
        <relationshipName>RRT</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Show_Health_Scores__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Health Scores</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Portal_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SpringCM Portal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_EnabledEndDate__c</fullName>
        <inlineHelpText>This is the date that the user becomes disabled in SpringCM.  Leave blank for never.  Put in today&apos;s date for immediately.</inlineHelpText>
        <label>SpringCM Enabled End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_EnabledStartDate__c</fullName>
        <inlineHelpText>This is that date that the user becomes enabled in SpringCM. Leave blank if enabled immediately.</inlineHelpText>
        <label>SpringCM Enabled Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_Persona__c</fullName>
        <description>Personas, or role-based user settings, displays different buttons and menu items depending upon the user&apos;s job function</description>
        <inlineHelpText>Type in the name of the Persona the user is to be assinged to.</inlineHelpText>
        <label>SpringCM Persona</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_Role__c</fullName>
        <inlineHelpText>-Guest (View Only Access)
-Limited Subscriber (Select access to features)
-Full Subscriber (Complete access to features)
-User Administrator (Complete access to features and some administrative power)
-Super Administrator (Full administrative power)</inlineHelpText>
        <label>SpringCM Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Subscriber</fullName>
                    <default>true</default>
                    <label>Full Subscriber</label>
                </value>
                <value>
                    <fullName>Super Administrator</fullName>
                </value>
                <value>
                    <fullName>User Administrator</fullName>
                </value>
                <value>
                    <fullName>Limited Subscriber</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpringCMEos__SpringCM_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By clicking this the user will be added to SpringCM.  Also unclicking this will delete the user from SpringCM.</description>
        <label>SpringCM User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Commercial Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employer North</fullName>
                </value>
                <value>
                    <fullName>Employer South</fullName>
                </value>
                <value>
                    <fullName>Employer West</fullName>
                </value>
                <value>
                    <fullName>Labor &amp; Govt</fullName>
                </value>
                <value>
                    <fullName>Health Systems</fullName>
                </value>
                <value>
                    <fullName>HSS - New Business</fullName>
                </value>
                <value>
                    <fullName>HSS - Existing Business</fullName>
                </value>
                <value>
                    <fullName>Health Systems - East</fullName>
                    <isActive>false</isActive>
                    <label>Health Systems - East</label>
                </value>
                <value>
                    <fullName>Health Systems - West</fullName>
                    <isActive>false</isActive>
                    <label>Health Systems - West</label>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                    <isActive>false</isActive>
                    <label>Mid-Atlantic</label>
                </value>
                <value>
                    <fullName>North Central</fullName>
                    <isActive>false</isActive>
                    <label>North Central</label>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                    <isActive>false</isActive>
                    <label>Northeast</label>
                </value>
                <value>
                    <fullName>Ohio Valley</fullName>
                    <isActive>false</isActive>
                    <label>Ohio Valley</label>
                </value>
                <value>
                    <fullName>South Central</fullName>
                    <isActive>false</isActive>
                    <label>South Central</label>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                    <isActive>false</isActive>
                    <label>Southeast</label>
                </value>
                <value>
                    <fullName>West</fullName>
                    <isActive>false</isActive>
                    <label>West</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Show_Copado_Tips__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Copado Tips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Work_Manager_Panels__c</fullName>
        <description>JSON containing current user panels on the Backlog</description>
        <label>Work Manager Panels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Users__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Pardot Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Version__c</fullName>
        <label>Pardot Api Version</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Pardot User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Pardot User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__InsideSales_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the user is an admin of the InsideSales system.</description>
        <label>InsideSales Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_subdomain__c</fullName>
        <label>InsideSales Subdomain</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_token__c</fullName>
        <label>InsideSales Authorization Token</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__password__c</fullName>
        <label>InsideSales Password</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__permissions__c</fullName>
        <label>InsideSales Permissions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>qbdialer__username__c</fullName>
        <label>InsideSales Username</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__Enable_ZaapIT_s_Layout_Editor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable the user to change ZaapIT&apos;s Layout Editor for smart tables/update</description>
        <label>Enable ZaapIT&apos;s Layout Editor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Enable_ZaapIT_s_View_Editor__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable ZaapIT&apos;s View Editor for none admin users</description>
        <inlineHelpText>Enable ZaapIT&apos;s View Editor for none admin users (don&apos;t mark with enable layout editor for the same user)</inlineHelpText>
        <label>Enable ZaapIT&apos;s View Editor</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_Users_Last_Login</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Active Users - Last Login</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>SpringCMEos__SpringCM_Users</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SpringCMEos__SpringCM_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SpringCM Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>